--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,6 +32,7 @@ a {
     top: 0;
     height: 65px;
     background-color: #F8F8F8;
+    border-bottom: 1px solid #E7E7E7;
 }
 
 .nav-bar {
@@ -83,11 +84,25 @@ a {
 /* ---- end top nav bar ---- */
 
 .core {
-    width: 80%;
+    width: 79.3%;
+    min-height: 100vh;
+    margin: 52px auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+
 }
 
 .main-bar {
+    width: 65.8%;
+    background-color: F4F4F4;
+}
 
+.sidebar {
+    width: 31.6%;
+    background-color: #F4F4F4;
+}
+
+.main-article {
+    width: 100%;
+    border: 1px solid #E7E7E7;
 }
