--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -236,6 +236,7 @@ a {
     flex-direction: column;
     align-items: center;
     position: relative;
+    border: 1px solid #E7E7E7;
 }
 
 .sidebar-id .id-background {
@@ -280,7 +281,7 @@ a {
     width: 100%;
     text-align: center;
     margin-top: 8px;
-    padding: 0 20px 50px 20px;
+    padding: 0 20px 32px 20px;
 }
 
 .sidebar-id ul li {
@@ -304,3 +305,62 @@ a {
     font-size: 12px;
     color: #C0C0C0;
 }
+
+/* ---- end sidebar id ---- */
+
+/* ---- sidebar popular ---- */
+
+.sidebar-popular {
+    width: 100%;
+    margin-top: 40px;
+    background-color: #FFFFFF;
+    border: 1px solid #E7E7E7;
+}
+
+.sidebar-popular ul {
+    width: 84%;
+    margin: auto;
+}
+
+.sidebar-popular h2 {
+    padding: 16px 0 14px 0;
+    font-family: "Oswald", Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 0.6px;
+    text-align: center;
+}
+
+.sidebar-popular img {
+    width: 100%;
+    height: 210px;
+    object-fit: cover;
+}
+
+.sidebar-popular .post-title {
+    font-family: "Oswald", Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: 0.8px;
+
+    margin-top: 12px;
+}
+
+.sidebar-popular .post-date {
+    font-family: "Lato", Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 14px;
+    letter-spacing: 0.3px;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #E7E7E7;
+}
+
+#last-post {
+    border: 0;
+    padding-bottom: 20px;
+}
+
