--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -229,6 +229,48 @@ a {
 
 /* ---- end main article ---- */
 
+/* ---- page nav ---- */
+
+.page-navigation {
+    margin: 50px 0 90px 0;
+}
+
+.page-links {
+    position: relative;
+    text-align: left;
+}
+
+.page-links li {
+    display: inline-block;
+    height: 38px;
+    width: 35px;
+    margin-right: 5px;
+    background-color: #FFFFFF;
+    border: 1px solid #E7E7E7;
+}
+
+.page-links li a {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    margin-top: 6px;
+    color: #444444;
+    text-align: center;
+}
+
+.page-links li .fa-solid {
+    font-size: 12px;
+    margin-top: 12px;
+}
+
+.page-links li .page-number {
+    font-family: "Oswald", Arial, Helvetica, sans-serif;
+    font-weight: 400;
+}
+
+/* ---- end page nav ---- */
+
 /* ---- sidebar id ---- */
 
 .sidebar-id {
@@ -472,4 +514,41 @@ a {
     margin-bottom: 10px;
 }
 
-/* ---- sidebar instagram posts ---- */
+/* ---- end sidebar instagram posts ---- */
+
+
+
+/* ---- footer ---- */
+
+.footer {
+    width: 100%;
+    background-color: #FFFFFF;
+    border-top: 1px solid #E7E7E7;
+    bottom: 0;
+}
+
+.footer h2 {
+    padding: 14px 0 14px 0;
+    font-family: "Oswald", Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 0.6px;
+    text-align: center;
+}
+
+.footer-images {
+    width: 100%;
+    height: 190px;
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+}
+
+.footer-images img {
+    width: 12.5%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* ---- end footer ---- */
