--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -827,7 +827,7 @@ a {
     /* ---- side bar ---- */
 
     .sidebar-id {
-        margin-top: 0;
+        margin-top: 10px;
     }
 
     .sidebar-id .id-background {
@@ -836,6 +836,14 @@ a {
 
     .sidebar-id .id-profile {
         margin-top: 116px;
+    }
+
+    .sidebar-id p {
+        padding: 0 20px;
+    }
+
+    .sidebar-id ul {
+        margin-top: 4px;
     }
 
     .sidebar-popular ul {
@@ -856,8 +864,8 @@ a {
 
     .instagram-feed .image-container .image-wrapper {
         width: 208px;
-        height: 210px;
-        margin-bottom: 20px;
+        height: 208px;
+        margin-bottom: 15px;
     }
 
     .instagram-feed {
