--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,7 @@
 
 html {
     box-sizing: border-box;
+    height: 100%;
 }
 
 *, *::before, *::after {
@@ -667,7 +668,43 @@ a {
 
 /* ---- end sidebar instagram posts ---- */
 
+/* ---- nav to top ---- */
 
+.return-top {
+  position: sticky;
+  display: none;
+  bottom: 25px; 
+  margin-left: auto;
+  right: 25px;  
+  height: 35px;
+  width: 35px;
+
+}
+
+.return-top a {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(190, 103, 72, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.return-top a:hover {
+    color: rgba(255, 255, 255, 1);
+    background-color: rgba(190, 103, 72, 1);
+}
+
+.return-top a i {
+    position: relative;
+    font-size: 20px;
+}
+
+/* ---- end nav to top ---- */
 
 /* ---- footer ---- */
 
@@ -771,10 +808,6 @@ a {
     }
 
     /* ---- main ---- */
-
-    .main-article {
-        margin-top: 106px;
-    }
 
     .main-article img {
         height: 312px;
@@ -882,7 +915,7 @@ a {
     .top-bar {
         height: 56px;
         z-index: 60;
-        position: fixed;
+    
     }
 
     .nav-bar {
